// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/searchHelpers transformQuery 1`] = `
Object {
  "page": "1",
  "page-size": "10",
  "sort": "-relevance",
}
`;

exports[`util/searchHelpers transformQuery 2`] = `
Object {
  "page": "1",
  "page-size": "10",
  "resource-types": "urn:resourcetype:academicArticle",
  "sort": "-relevance",
}
`;

exports[`util/searchHelpers transformQuery 3`] = `
Object {
  "context-types": "topic-article",
  "page": "1",
  "page-size": "10",
  "sort": "-relevance",
}
`;
